// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`groups tags detection > detect identity tag from rules 1`] = `
{
  "title": {
    "classification": 0,
    "isIdentityTag": true,
    "miscClassification": {
      "groupId": "IDENTITY",
      "groupWeight": 10,
      "score": 1000,
      "tagWeight": 0,
    },
  },
}
`;

exports[`groups tags detection > detects async script tags from rules 1`] = `
{
  "asyncScript": {
    "classification": 0,
    "isAsyncScriptTag": true,
    "miscClassification": {
      "groupId": "ASYNC_SCRIPT",
      "groupWeight": 7,
      "score": 700,
      "tagWeight": 0,
    },
  },
  "asyncTypeModule": {
    "classification": 1,
    "isAsyncScriptTag": true,
    "miscClassification": {
      "groupId": "ASYNC_SCRIPT",
      "groupWeight": 7,
      "score": 701,
      "tagWeight": 1,
    },
  },
}
`;

exports[`groups tags detection > detects connection tags from rules 1`] = `
{
  "dnsPrefetch": {
    "classification": 0,
    "isConnectionTag": true,
    "miscClassification": {
      "groupId": "CONNECTION",
      "groupWeight": 9,
      "score": 900,
      "tagWeight": 0,
    },
  },
  "preconnect": {
    "classification": 1,
    "isConnectionTag": true,
    "miscClassification": {
      "groupId": "CONNECTION",
      "groupWeight": 9,
      "score": 901,
      "tagWeight": 1,
    },
  },
}
`;

exports[`groups tags detection > detects deferred tags from rules 1`] = `
{
  "defer": {
    "classification": 0,
    "isDeferredTag": true,
    "miscClassification": {
      "groupId": "DEFERRED",
      "groupWeight": 2,
      "score": 200,
      "tagWeight": 0,
    },
  },
  "typeModule": {
    "classification": 1,
    "isDeferredTag": true,
    "miscClassification": {
      "groupId": "DEFERRED",
      "groupWeight": 2,
      "score": 201,
      "tagWeight": 1,
    },
  },
}
`;

exports[`groups tags detection > detects execution tags from rules 1`] = `
{
  "script": {
    "classification": 1,
    "isExecutionTag": true,
    "miscClassification": {
      "groupId": "EXECUTION",
      "groupWeight": 4,
      "score": 401,
      "tagWeight": 1,
    },
  },
  "scriptBlocking": {
    "classification": 2,
    "isExecutionTag": true,
    "miscClassification": {
      "groupId": "EXECUTION",
      "groupWeight": 4,
      "score": 402,
      "tagWeight": 2,
    },
  },
  "scriptBlockingAsync": {
    "classification": 5,
    "isExecutionTag": true,
    "miscClassification": {
      "groupId": "ASYNC_SCRIPT",
      "groupWeight": 7,
      "score": 700,
      "tagWeight": 0,
    },
  },
  "scriptBlockingDefer": {
    "classification": 3,
    "isExecutionTag": true,
    "miscClassification": {
      "groupId": "EXECUTION",
      "groupWeight": 4,
      "score": 403,
      "tagWeight": 3,
    },
  },
  "scriptBlockingModule": {
    "classification": 4,
    "isExecutionTag": true,
    "miscClassification": {
      "groupId": "EXECUTION",
      "groupWeight": 4,
      "score": 404,
      "tagWeight": 4,
    },
  },
  "scriptInline": {
    "classification": 6,
    "isExecutionTag": true,
    "miscClassification": {
      "groupId": "EXECUTION",
      "groupWeight": 4,
      "score": 406,
      "tagWeight": 6,
    },
  },
  "scriptNomodule": {
    "classification": 0,
    "isExecutionTag": true,
    "miscClassification": {
      "groupId": "EXECUTION",
      "groupWeight": 4,
      "score": 400,
      "tagWeight": 0,
    },
  },
}
`;

exports[`groups tags detection > detects foundation tags from rules 1`] = `
{
  "base": {
    "classification": 1,
    "isFoundationTag": true,
    "miscClassification": {
      "groupId": "FOUNDATION",
      "groupWeight": 11,
      "score": 1101,
      "tagWeight": 1,
    },
  },
  "metaCharset": {
    "classification": 4,
    "isFoundationTag": true,
    "miscClassification": {
      "groupId": "FOUNDATION",
      "groupWeight": 11,
      "score": 1104,
      "tagWeight": 4,
    },
  },
  "metaCsp": {
    "classification": 2,
    "isFoundationTag": true,
    "miscClassification": {
      "groupId": "FOUNDATION",
      "groupWeight": 11,
      "score": 1102,
      "tagWeight": 2,
    },
  },
  "metaReferrer": {
    "classification": 0,
    "isFoundationTag": true,
    "miscClassification": {
      "groupId": "FOUNDATION",
      "groupWeight": 11,
      "score": 1100,
      "tagWeight": 0,
    },
  },
  "metaViewport": {
    "classification": 3,
    "isFoundationTag": true,
    "miscClassification": {
      "groupId": "FOUNDATION",
      "groupWeight": 11,
      "score": 1103,
      "tagWeight": 3,
    },
  },
}
`;

exports[`groups tags detection > detects import style tags from rules 1`] = `
{
  "importStyle": {
    "classification": 0,
    "isImportStyleTag": true,
    "miscClassification": {
      "groupId": "IMPORT_STYLES",
      "groupWeight": 6,
      "score": 600,
      "tagWeight": 0,
    },
  },
}
`;

exports[`groups tags detection > detects importmap tags from rules 1`] = `
{
  "importmap": {
    "classification": 0,
    "isImportmapTag": true,
    "miscClassification": {
      "groupId": "IMPORTMAP",
      "groupWeight": 5,
      "score": 500,
      "tagWeight": 0,
    },
  },
}
`;

exports[`groups tags detection > detects prediction tags from rules 1`] = `
{
  "prefetch": {
    "classification": 0,
    "isPredictionTag": true,
    "miscClassification": {
      "groupId": "PREDICTION",
      "groupWeight": 1,
      "score": 100,
      "tagWeight": 0,
    },
  },
  "speculationRules": {
    "classification": 1,
    "isPredictionTag": true,
    "miscClassification": {
      "groupId": "PREDICTION",
      "groupWeight": 1,
      "score": 101,
      "tagWeight": 1,
    },
  },
}
`;

exports[`groups tags detection > detects preparation tags from rules 1`] = `
{
  "modulepreload": {
    "classification": 0,
    "isPreparationTag": true,
    "miscClassification": {
      "groupId": "PREPARATION",
      "groupWeight": 8,
      "score": 800,
      "tagWeight": 0,
    },
  },
  "preload": {
    "classification": 1,
    "isPreparationTag": true,
    "miscClassification": {
      "groupId": "PREPARATION",
      "groupWeight": 8,
      "score": 801,
      "tagWeight": 1,
    },
  },
}
`;

exports[`groups tags detection > detects style tags from rules 1`] = `
{
  "linkStylesheet": {
    "classification": 0,
    "isStyleTag": true,
    "miscClassification": {
      "groupId": "STYLING",
      "groupWeight": 3,
      "score": 300,
      "tagWeight": 0,
    },
  },
  "style": {
    "classification": 1,
    "isStyleTag": true,
    "miscClassification": {
      "groupId": "STYLING",
      "groupWeight": 3,
      "score": 301,
      "tagWeight": 1,
    },
  },
}
`;

exports[`groups tags detection > does not classify unrelated tags 1`] = `
{
  "link": {
    "isIdentityTag": false,
    "miscClassification": {
      "groupId": "STYLING",
      "groupWeight": 3,
      "score": 300,
      "tagWeight": 0,
    },
  },
  "linkOGImage": {
    "isConnectionTag": false,
    "miscClassification": {
      "groupId": "MISC",
      "groupWeight": 0,
      "score": 0,
      "tagWeight": 0,
    },
  },
  "linkStylesheet": {
    "isDeferredTag": false,
    "miscClassification": {
      "groupId": "STYLING",
      "groupWeight": 3,
      "score": 300,
      "tagWeight": 0,
    },
  },
  "metaCharset": {
    "isImportmapTag": false,
    "miscClassification": {
      "groupId": "FOUNDATION",
      "groupWeight": 11,
      "score": 1104,
      "tagWeight": 4,
    },
  },
  "metaDescription": {
    "isFoundationTag": false,
    "miscClassification": {
      "groupId": "MISC",
      "groupWeight": 0,
      "score": 0,
      "tagWeight": 0,
    },
  },
  "metaOGDecription": {
    "isMiscTag": true,
    "miscClassification": {
      "groupId": "MISC",
      "groupWeight": 0,
      "score": 0,
      "tagWeight": 0,
    },
  },
  "metaViewport": {
    "isAsyncScriptTag": false,
    "miscClassification": {
      "groupId": "FOUNDATION",
      "groupWeight": 11,
      "score": 1103,
      "tagWeight": 3,
    },
  },
  "prerenderLink": {
    "isPredictionTag": false,
    "miscClassification": {
      "groupId": "MISC",
      "groupWeight": 0,
      "score": 0,
      "tagWeight": 0,
    },
  },
  "script": {
    "isPreparationTag": false,
    "miscClassification": {
      "groupId": "EXECUTION",
      "groupWeight": 4,
      "score": 406,
      "tagWeight": 6,
    },
  },
  "scriptAsync": {
    "isStyleTag": false,
    "miscClassification": {
      "groupId": "ASYNC_SCRIPT",
      "groupWeight": 7,
      "score": 700,
      "tagWeight": 0,
    },
  },
  "scriptJson": {
    "isExecutionTag": false,
    "miscClassification": {
      "groupId": "MISC",
      "groupWeight": 0,
      "score": 0,
      "tagWeight": 0,
    },
  },
  "scriptSchema": {
    "isImportStyleTag": false,
    "miscClassification": {
      "groupId": "MISC",
      "groupWeight": 0,
      "score": 0,
      "tagWeight": 0,
    },
  },
}
`;

exports[`priority behavior > async beats defer beats prefetch by group weight 1`] = `
{
  "asyncBeatsDefer": true,
  "asyncGroupWeight": 7,
  "deferBeatsPrefetch": true,
  "deferGroupWeight": 2,
  "prefetchGroupWeight": 1,
}
`;

exports[`priority behavior > charset beats viewport inside Foundation Group by tag weight 1`] = `
{
  "charset": {
    "groupId": "FOUNDATION",
    "tagWeight": 4,
  },
  "charsetBeatsViewport": true,
  "viewport": {
    "groupId": "FOUNDATION",
    "tagWeight": 3,
  },
}
`;

exports[`priority behavior > multiple rel tokens are supported 1`] = `
{
  "groupId": "CONNECTION",
  "groupWeight": 9,
  "score": 901,
  "tagWeight": 1,
}
`;
